RESOLVED FIXED298148
[JSC] emit `op_typeof_is_undefined` for `typeof x>"u"`
https://bugs.webkit.org/show_bug.cgi?id=298148
Summary [JSC] emit `op_typeof_is_undefined` for `typeof x>"u"`
Sosuke Suzuki
Reported 2025-08-30 06:51:17 PDT
esbuild minifies `typeof x === "undefined"` to `typeof x>"u"`. This reduces code size but is slower in JSC. This patch makes `typeof x>"u"` emit `op_typeof_is_undefined` just like `typeof x === "undefined"`.
Attachments
Sosuke Suzuki
Comment 1 2025-08-30 06:54:38 PDT
EWS
Comment 2 2025-08-30 19:27:57 PDT
Committed 299368@main (a937882ba69b): <https://commits.webkit.org/299368@main> Reviewed commits have been landed. Closing PR #50101 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-08-30 19:28:14 PDT
Note You need to log in before you can comment on or make changes to this bug.