[JSC] emit `op_typeof_is_undefined` for `typeof x>"u"` https://bugs.webkit.org/show_bug.cgi?id=298148

Reviewed by Keith Miller and Yusuke Suzuki.

esbuild minifies `typeof x === "undefined"` to `typeof x>"u"`[1]. This reduces
code size but is slower in JSC.

This patch makes `typeof x>"u"` emit `op_typeof_is_undefined` just like
`typeof x === "undefined"`.

[1]: https://esbuild.github.io/try/#dAAwLjI1LjkALS1taW5pZnkAdHlwZW9mIHggPT09ICJ1bmRlZmluZWQi

                                   TipOfTree                  Patched

minified-typeof-undefined        4.4291+-0.2282     ^      1.8605+-0.0225        ^ definitely 2.3805x faster

* JSTests/microbenchmarks/minified-typeof-undefined.js: Added.
(test):
* JSTests/stress/minified-typeof-undefined.js: Added.
(shouldBe):
(test):
(i.shouldBe.test):
* Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::emitBinaryOp):

Canonical link: https://commits.webkit.org/299368@main